--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <section class="section section-no-padding">
         <h2 class="hidden"></h2>
         <div class="container">
-          <ul class="skils">
+          <ul class="skils list">
             <li class="skils__item">
               <div class="skils__icon">
                 <svg class="skils__title-icon">
