--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
             ><span class="logo__rightpart">Studio</span></a
           >
           <address>
-            <ul>
+            <ul class="footer__list">
               <li class="footer__item">
                 <a class="footer__adress link" href=""
                   >г. Киев, пр-т Леси Украинки, 26</a
