--- a/index.html
+++ b/index.html
@@ -63,12 +63,21 @@
               >
             </li>
           </ul>
+          <button type="button" class="menu-open-btn">
+            <svg class="icon-close-button" width="40" height="40">
+              <use href="./images/symbol-defs.svg#icon-menu"></use>
+            </svg>
+          </button>
         </div>
-        <button type="button" class="menu-open-btn">0</button>
+
         <div class="mob-menu is-hidden">
           <div class="container">
             <div class="mob-menu-top">
-              <button type="button" class="menu-close-btn">X</button>
+              <button type="button" class="menu-close-btn">
+                <svg class="icon-close-button" width="40" height="40">
+                  <use href="./images/symbol-defs.svg#icon-close"></use>
+                </svg>
+              </button>
 
               <ul class="mob__list list">
                 <li class="mob__item">
@@ -242,7 +251,7 @@
               <div class="container-soc">
                 <h3 class="name">Игорь Демьяненко</h3>
                 <p class="profession" lang="en">Product Designer</p>
-                <ul class="soc list">
+                <ul class="soc">
                   <li class="soc__item">
                     <a href="" class="soc__link link">
                       <svg class="soc__icon" width="20" height="20">
@@ -291,7 +300,7 @@
               <div class="container-soc">
                 <h3 class="name">Ольга Репина</h3>
                 <p class="profession" lang="en">Frontend Developer</p>
-                <ul class="soc list">
+                <ul class="soc">
                   <li class="soc__item">
                     <a href="" class="soc__link link">
                       <svg class="soc__icon" width="20" height="20">
@@ -340,7 +349,7 @@
               <div class="container-soc">
                 <h3 class="name">Николай Тарасов</h3>
                 <p class="profession" lang="en">Marketing</p>
-                <ul class="soc list">
+                <ul class="soc">
                   <li class="soc__item">
                     <a href="" class="soc__link link">
                       <svg class="soc__icon" width="20" height="20">
@@ -389,7 +398,7 @@
               <div class="container-soc">
                 <h3 class="name">Михаил Ермаков</h3>
                 <p class="profession" lang="en">UI Designer</p>
-                <ul class="soc list">
+                <ul class="soc">
                   <li class="soc__item">
                     <a href="" class="soc__link link">
                       <svg class="soc__icon" width="20" height="20">
