--- a/portfolio.html
+++ b/portfolio.html
@@ -65,6 +65,68 @@
               >
             </li>
           </ul>
+          <button type="button" class="menu-open-btn">
+            <svg class="icon-close-button" width="40" height="40">
+              <use href="./images/symbol-defs.svg#icon-menu"></use>
+            </svg>
+          </button>
+        </div>
+
+        <div class="mob-menu is-hidden">
+          <div class="container">
+            <div class="mob-menu-top">
+              <button type="button" class="menu-close-btn">
+                <svg class="icon-close-button" width="40" height="40">
+                  <use href="./images/symbol-defs.svg#icon-close"></use>
+                </svg>
+              </button>
+
+              <ul class="mob__list list">
+                <li class="mob__item">
+                  <a class="mob__link link current" href="">Студия</a>
+                </li>
+                <li class="mob__item">
+                  <a class="mob__link link" href="./portfolio.html"
+                    >Портфолио</a
+                  >
+                </li>
+                <li class="mob__item">
+                  <a class="mob__link link" href="">Контакты</a>
+                </li>
+              </ul>
+            </div>
+            <div class="mob-menu-bottom">
+              <ul class="mob-connect list">
+                <li class="mob-connect__item">
+                  <a
+                    class="mob-connect__mail link"
+                    href="mailto:info@devstudio.com"
+                  >
+                    info@devstudio.com</a
+                  >
+                </li>
+                <li class="mob-connect__item">
+                  <a class="mob-connect__tel link" href="tel:+380961111111">
+                    +38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+              <ul class="mob__soc list">
+                <li class="mob-soc__item">
+                  <a class="mob-soc__text" href="Instagram">Instagram</a>
+                </li>
+                <li class="mob-soc__item">
+                  <a class="mob-soc__text" href="Twitter">Twitter</a>
+                </li>
+                <li class="mob-soc__item">
+                  <a class="mob-soc__text" href="Facebook">Facebook</a>
+                </li>
+                <li class="mob-soc__item">
+                  <a class="mob-soc__text" href="LinkedIn">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -289,67 +351,69 @@
     </main>
     <footer class="footer">
       <div class="container container-footer">
-        <div class="footer__contacts">
-          <a class="footer__logo link" href=""
-            ><span class="logo__leftpart">Web</span
-            ><span class="logo__rightpart">Studio</span></a
-          >
-          <address>
-            <ul>
-              <li class="footer__item">
-                <a class="footer__adress link" href=""
-                  >г. Киев, пр-т Леси Украинки, 26</a
-                >
+        <div class="footer__tablet">
+          <div class="footer__contacts">
+            <a class="footer__logo link" href=""
+              ><span class="logo__leftpart">Web</span
+              ><span class="logo__rightpart">Studio</span></a
+            >
+            <address>
+              <ul class="footer__list">
+                <li class="footer__item">
+                  <a class="footer__adress link" href=""
+                    >г. Киев, пр-т Леси Украинки, 26</a
+                  >
+                </li>
+                <li class="footer__item">
+                  <a
+                    class="footer__link link contacts-link-footer"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="footer__item">
+                  <a
+                    class="footer__link link contacts-link-footer"
+                    href="tel:+380961111111"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer-slogan">
+            <h3 class="footer-text">присоединяйтесь</h3>
+            <ul class="footer-soc-list">
+              <li class="footer-soc-item">
+                <a href="" class="footer-soc-link link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="footer__item">
-                <a
-                  class="footer__link link contacts-link-footer"
-                  href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
+              <li class="footer-soc-item">
+                <a href="" class="footer-soc-link link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="footer__item">
-                <a
-                  class="footer__link link contacts-link-footer"
-                  href="tel:+380961111111"
-                  >+38 096 111 11 11</a
-                >
+              <li class="footer-soc-item">
+                <a href="" class="footer-soc-link link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a href="" class="footer-soc-link link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="footer-slogan">
-          <h3 class="footer-text">присоединяйтесь</h3>
-          <ul class="footer-soc-list">
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-link link">
-                <svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-link link">
-                <svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-link link">
-                <svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-link link">
-                <svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div class="footer-send">
           <h3 class="footer-text">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h3>
