--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,6 @@
             ><span class="logo__leftpart">Web</span
             ><span class="logo__rightpart">Studio</span></a
           >
-
           <nav class="nav">
             <ul class="nav__list">
               <li class="nav__item">
@@ -136,19 +135,19 @@
         <div class="container">
           <h1 class="portfolio__title">portfolio</h1>
           <ul class="portfolio__button">
-            <li class="hero-link">
+            <li class="portfolio__button-item">
               <button class="button" type="button">Все</button>
             </li>
-            <li class="hero-link">
+            <li class="portfolio__button-item">
               <button class="button" type="button">Веб-сайты</button>
             </li>
-            <li class="hero-link">
+            <li class="portfolio__button-item">
               <button class="button" type="button">Приложения</button>
             </li>
-            <li class="hero-link">
+            <li class="portfolio__button-item">
               <button class="button" type="button">Дизайн</button>
             </li>
-            <li class="hero-link">
+            <li class="portfolio__button-item">
               <button class="button" type="button">Маркетинг</button>
             </li>
           </ul>
