--- a/index.html
+++ b/index.html
@@ -242,12 +242,28 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
             <li class="team__item">
-              <img
-                src="./images/img1.jpg"
-                alt="фото1"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./images/img1-1x.jpg 1x, ./images/img1-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/img1-tab1x.jpg 1x,
+                    ./images/img1-tab2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/img1-mob1x.jpg 1x,
+                    ./images/img1-mob2x.jpg 2x
+                  "
+                  media="(min-width: 480px)"
+                />
+                <img src="./images/img1.jpg" alt="фото1" width="270" />
+              </picture>
+
               <div class="container-soc">
                 <h3 class="name">Игорь Демьяненко</h3>
                 <p class="profession" lang="en">Product Designer</p>
@@ -291,12 +307,27 @@
             </li>
 
             <li class="team__item">
-              <img
-                src="./images/img2.jpg"
-                alt="фото2"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./images/img2-1x.jpg 1x, ./images/img2-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/img2-tab1x.jpg 1x,
+                    ./images/img2-tab2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/img2-mob1x.jpg 1x,
+                    ./images/img2-mob2x.jpg 2x
+                  "
+                  media="(min-width: 480px)"
+                />
+                <img src="./images/img2.jpg" alt="фото2" width="270" />
+              </picture>
               <div class="container-soc">
                 <h3 class="name">Ольга Репина</h3>
                 <p class="profession" lang="en">Frontend Developer</p>
@@ -340,12 +371,27 @@
             </li>
 
             <li class="team__item">
-              <img
-                src="./images/img3.jpg"
-                alt="фото3"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./images/img3-1x.jpg 1x, ./images/img3-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/img3-tab1x.jpg 1x,
+                    ./images/img3-tab2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/img3-mob1x.jpg 1x,
+                    ./images/img3-mob2x.jpg 2x
+                  "
+                  media="(min-width: 480px)"
+                />
+                <img src="./images/img3.jpg" alt="фото3" width="270" />
+              </picture>
               <div class="container-soc">
                 <h3 class="name">Николай Тарасов</h3>
                 <p class="profession" lang="en">Marketing</p>
@@ -389,12 +435,27 @@
             </li>
 
             <li class="team__item">
-              <img
-                src="./images/img4.jpg"
-                alt="фото4"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./images/img4-1x.jpg 1x, ./images/img4-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/img4-tab1x.jpg 1x,
+                    ./images/img4-tab2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/img4-mob1x.jpg 1x,
+                    ./images/img4-mob2x.jpg 2x
+                  "
+                  media="(min-width: 480px)"
+                />
+                <img src="./images/img4.jpg" alt="фото4" width="270" />
+              </picture>
               <div class="container-soc">
                 <h3 class="name">Михаил Ермаков</h3>
                 <p class="profession" lang="en">UI Designer</p>
