--- a/portfolio.html
+++ b/portfolio.html
@@ -155,12 +155,22 @@
             <li class="list-portfolio shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
-                  <img
-                    src="./img/img1.jpg"
-                    alt="фото1"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="./img/img1-1x.jpg 1x, ./img/img1-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./img/img1-tab1x.jpg 1x, ./img/img1-tab2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./img/img1-mob1x.jpg 1x, ./img/img1-mob2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./img/img1.jpg" alt="фото1" width="370" />
+                  </picture>
+
                   <p class="content-top-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -177,12 +187,21 @@
             <li class="list-portfolio shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
-                  <img
-                    src="./img/img2.jpg"
-                    alt="фото2"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="./img/img2-1x.jpg 1x, ./img/img2-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./img/img2-tab1x.jpg 1x, ./img/img2-tab2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./img/img2-mob1x.jpg 1x, ./img/img2-mob2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./img/img2.jpg" alt="фото1" width="370" />
+                  </picture>
                   <p class="content-top-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -199,12 +218,21 @@
             <li class="list-portfolio shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
-                  <img
-                    src="./img/img3.jpg"
-                    alt="фото3"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="./img/img3-1x.jpg 1x, ./img/img3-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./img/img3-tab1x.jpg 1x, ./img/img3-tab2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./img/img3-mob1x.jpg 1x, ./img/img3-mob2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./img/img3.jpg" alt="фото1" width="370" />
+                  </picture>
                   <p class="content-top-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -221,12 +249,21 @@
             <li class="list-portfolio shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
-                  <img
-                    src="./img/img4.jpg"
-                    alt="фото4"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="./img/img4-1x.jpg 1x, ./img/img4-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./img/img4-tab1x.jpg 1x, ./img/img4-tab2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./img/img4-mob1x.jpg 1x, ./img/img4-mob2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./img/img4.jpg" alt="фото1" width="370" />
+                  </picture>
                   <p class="content-top-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -242,12 +279,21 @@
             <li class="list-portfolio shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
-                  <img
-                    src="./img/img5.jpg"
-                    alt="фото4"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="./img/img5-1x.jpg 1x, ./img/img5-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./img/img5-tab1x.jpg 1x, ./img/img5-tab2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./img/img5-mob1x.jpg 1x, ./img/img5-mob2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./img/img5.jpg" alt="фото1" width="370" />
+                  </picture>
                   <p class="content-top-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -263,12 +309,21 @@
             <li class="list-portfolio shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
-                  <img
-                    src="./img/img6.jpg"
-                    alt="фото4"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="./img/img6-1x.jpg 1x, ./img/img6-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./img/img6-tab1x.jpg 1x, ./img/img6-tab2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./img/img6-mob1x.jpg 1x, ./img/img6-mob2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./img/img6.jpg" alt="фото1" width="370" />
+                  </picture>
                   <p class="content-top-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -284,12 +339,21 @@
             <li class="list-portfolio shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
-                  <img
-                    src="./img/img7.jpg"
-                    alt="фото4"
-                    width="370"
-                    height="260"
-                  />
+                  <picture>
+                    <source
+                      srcset="./img/img7-1x.jpg 1x, ./img/img7-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./img/img7-tab1x.jpg 1x, ./img/img7-tab2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./img/img7-mob1x.jpg 1x, ./img/img7-mob2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./img/img7.jpg" alt="фото1" width="370" />
+                  </picture>
                   <p class="content-top-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -305,12 +369,21 @@
             <li class="list-portfolio shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
-                  <img
-                    src="./img/img8.jpg"
-                    alt="фото4"
-                    width="370"
-                    height="260"
-                  />
+                  <picture>
+                    <source
+                      srcset="./img/img8-1x.jpg 1x, ./img/img8-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./img/img8-tab1x.jpg 1x, ./img/img8-tab2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./img/img8-mob1x.jpg 1x, ./img/img8-mob2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./img/img8.jpg" alt="фото1" width="370" />
+                  </picture>
                   <p class="content-top-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -326,12 +399,21 @@
             <li class="list-portfolio shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
-                  <img
-                    src="./img/img9.jpg"
-                    alt="фото4"
-                    width="370"
-                    height="260"
-                  />
+                  <picture>
+                    <source
+                      srcset="./img/img9-1x.jpg 1x, ./img/img9-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./img/img9-tab1x.jpg 1x, ./img/img9-tab2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./img/img9-mob1x.jpg 1x, ./img/img9-mob2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./img/img9.jpg" alt="фото1" width="370" />
+                  </picture>
                   <p class="content-top-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
