--- a/portfolio.html
+++ b/portfolio.html
@@ -151,7 +151,7 @@
               <button class="button" type="button">Маркетинг</button>
             </li>
           </ul>
-          <ul class="flex-container">
+          <ul class="portfolio-container">
             <li class="list-portfolio shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
