--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <section class="team section section no-padding">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
-          <ul class="team__list">
+          <ul class="team__list list">
             <li class="team__item">
               <picture>
                 <source
