--- a/portfolio.html
+++ b/portfolio.html
@@ -82,12 +82,10 @@
 
               <ul class="mob__list list">
                 <li class="mob__item">
-                  <a class="mob__link link current" href="">Студия</a>
+                  <a class="mob__link link" href="index.html">Студия</a>
                 </li>
                 <li class="mob__item">
-                  <a class="mob__link link" href="./portfolio.html"
-                    >Портфолио</a
-                  >
+                  <a class="mob__link link current" href="">Портфолио</a>
                 </li>
                 <li class="mob__item">
                   <a class="mob__link link" href="">Контакты</a>
@@ -168,7 +166,7 @@
                       srcset="./img/img1-mob1x.jpg 1x, ./img/img1-mob2x.jpg 2x"
                       media="(min-width: 480px)"
                     />
-                    <img src="./img/img1.jpg" alt="фото1" width="350" />
+                    <img src="./img/img1.jpg" alt="фото1" width="370" />
                   </picture>
 
                   <p class="content-top-text">
@@ -200,7 +198,7 @@
                       srcset="./img/img2-mob1x.jpg 1x, ./img/img2-mob2x.jpg 2x"
                       media="(min-width: 480px)"
                     />
-                    <img src="./img/img2.jpg" alt="фото1" width="350" />
+                    <img src="./img/img2.jpg" alt="фото1" width="370" />
                   </picture>
                   <p class="content-top-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
@@ -232,7 +230,7 @@
                       srcset="./img/img3-mob1x.jpg 1x, ./img/img3-mob2x.jpg 2x"
                       media="(min-width: 480px)"
                     />
-                    <img src="./img/img3.jpg" alt="фото1" width="350" />
+                    <img src="./img/img3.jpg" alt="фото1" width="370" />
                   </picture>
                   <p class="content-top-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
@@ -263,7 +261,7 @@
                       srcset="./img/img4-mob1x.jpg 1x, ./img/img4-mob2x.jpg 2x"
                       media="(min-width: 480px)"
                     />
-                    <img src="./img/img4.jpg" alt="фото1" width="350" />
+                    <img src="./img/img4.jpg" alt="фото1" width="370" />
                   </picture>
                   <p class="content-top-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
@@ -293,7 +291,7 @@
                       srcset="./img/img5-mob1x.jpg 1x, ./img/img5-mob2x.jpg 2x"
                       media="(min-width: 480px)"
                     />
-                    <img src="./img/img5.jpg" alt="фото1" width="350" />
+                    <img src="./img/img5.jpg" alt="фото1" width="370" />
                   </picture>
                   <p class="content-top-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
@@ -323,7 +321,7 @@
                       srcset="./img/img6-mob1x.jpg 1x, ./img/img6-mob2x.jpg 2x"
                       media="(min-width: 480px)"
                     />
-                    <img src="./img/img6.jpg" alt="фото1" width="350" />
+                    <img src="./img/img6.jpg" alt="фото1" width="370" />
                   </picture>
                   <p class="content-top-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
@@ -353,7 +351,7 @@
                       srcset="./img/img7-mob1x.jpg 1x, ./img/img7-mob2x.jpg 2x"
                       media="(min-width: 480px)"
                     />
-                    <img src="./img/img7.jpg" alt="фото1" width="350" />
+                    <img src="./img/img7.jpg" alt="фото1" width="370" />
                   </picture>
                   <p class="content-top-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
@@ -383,7 +381,7 @@
                       srcset="./img/img8-mob1x.jpg 1x, ./img/img8-mob2x.jpg 2x"
                       media="(min-width: 480px)"
                     />
-                    <img src="./img/img8.jpg" alt="фото1" width="350" />
+                    <img src="./img/img8.jpg" alt="фото1" width="370" />
                   </picture>
                   <p class="content-top-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
@@ -413,7 +411,7 @@
                       srcset="./img/img9-mob1x.jpg 1x, ./img/img9-mob2x.jpg 2x"
                       media="(min-width: 480px)"
                     />
-                    <img src="./img/img9.jpg" alt="фото1" width="350" />
+                    <img src="./img/img9.jpg" alt="фото1" width="370" />
                   </picture>
                   <p class="content-top-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
