--- a/index.html
+++ b/index.html
@@ -244,24 +244,24 @@
             <li class="team__item">
               <picture>
                 <source
-                  srcset="./images/img1-1x.jpg 1x, ./images/img1-2x.jpg 2x"
+                  srcset="./images/img1-2x.jpg 2x, ./images/img1-1x.jpg 1x"
                   media="(min-width: 1200px)"
                 />
                 <source
                   srcset="
-                    ./images/img1-tab1x.jpg 1x,
-                    ./images/img1-tab2x.jpg 2x
+                    ./images/img1-tab2x.jpg 2x,
+                    ./images/img1-tab1x.jpg 1x
                   "
                   media="(min-width: 768px)"
                 />
                 <source
                   srcset="
-                    ./images/img1-mob1x.jpg 1x,
-                    ./images/img1-mob2x.jpg 2x
+                    ./images/img1-mob2x.jpg 2x,
+                    ./images/img1-mob1x.jpg 1x
                   "
                   media="(min-width: 480px)"
                 />
-                <img src="./images/img1.jpg" alt="фото1" width="270" />
+                <img src="./images/img1-mob1x.jpg" alt="фото1" width="270" />
               </picture>
 
               <div class="container-soc">
