--- a/portfolio.html
+++ b/portfolio.html
@@ -150,7 +150,7 @@
             </li>
           </ul>
           <ul class="flex-container">
-            <li class="list-portfolio shadow">
+            <li class="list-portfolio list shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
                   <picture>
