--- a/portfolio.html
+++ b/portfolio.html
@@ -182,7 +182,7 @@
               </a>
             </li>
 
-            <li class="list-portfolio shadow">
+            <li class="list-portfolio list shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
                   <picture>
@@ -214,7 +214,7 @@
               </a>
             </li>
 
-            <li class="list-portfolio shadow">
+            <li class="list-portfolio list shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
                   <picture>
@@ -245,7 +245,7 @@
               </a>
             </li>
 
-            <li class="list-portfolio shadow">
+            <li class="list-portfolio list shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
                   <picture>
@@ -275,7 +275,7 @@
                 </div>
               </a>
             </li>
-            <li class="list-portfolio shadow">
+            <li class="list-portfolio list shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
                   <picture>
@@ -305,7 +305,7 @@
                 </div>
               </a>
             </li>
-            <li class="list-portfolio shadow">
+            <li class="list-portfolio list shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
                   <picture>
@@ -335,7 +335,7 @@
                 </div>
               </a>
             </li>
-            <li class="list-portfolio shadow">
+            <li class="list-portfolio list shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
                   <picture>
@@ -365,7 +365,7 @@
                 </div>
               </a>
             </li>
-            <li class="list-portfolio shadow">
+            <li class="list-portfolio list shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
                   <picture>
@@ -395,7 +395,7 @@
                 </div>
               </a>
             </li>
-            <li class="list-portfolio shadow">
+            <li class="list-portfolio list shadow">
               <a class="link content-link" href="">
                 <div class="content-top-wrap">
                   <picture>
